# c-structures

./: .clang-format  .clang-tidy  .clangd  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
.cmake/: fetch-content.cmake  llvm-toolchain.cmake
bplustree/: example.c  int_int_bplustree.c
include/: structures.h
include/structures/: list.h
include/structures/bplustree/: bplustree.h  int_int_bplustree.h
tests/: test_bplustree.c  test_true.c
